@@ -520,7 +520,7 @@ public abstract class SSTableReader extends SSTable implements UnfilteredSource,
                 sstable.validate();
 
             if (sstable.getKeyCache() != null)
-                logger.trace("key cache contains {}/{} keys", sstable.getKeyCache().size(), sstable.getKeyCache().getCapacity());
+                logger.trace("key cache contains {} keys", sstable.getKeyCache().size());
 
             return sstable;
         }
@@ -716,9 +716,7 @@ public abstract class SSTableReader extends SSTable implements UnfilteredSource,
         // under normal operation we can do this at any time, but SSTR is also used outside C* proper,
         // e.g. by BulkLoader, which does not initialize the cache.  As a kludge, we set up the cache
         // here when we know we're being wired into the rest of the server infrastructure.
-        InstrumentingCache<KeyCacheKey, RowIndexEntry> maybeKeyCache = CacheService.instance.keyCache;
-        if (maybeKeyCache.getCapacity() > 0)
-            keyCache = maybeKeyCache;
+        keyCache = CacheService.instance.keyCache;
 
         final ColumnFamilyStore cfs = Schema.instance.getColumnFamilyStoreInstance(metadata().id);
         if (cfs != null)
@@ -1333,7 +1331,7 @@ public abstract class SSTableReader extends SSTable implements UnfilteredSource,
     {
         CachingParams caching = metadata().params.caching;
 
-        if (!caching.cacheKeys() || keyCache == null || keyCache.getCapacity() == 0)
+        if (!caching.cacheKeys() || keyCache == null)
             return;
 
         KeyCacheKey cacheKey = new KeyCacheKey(metadata(), descriptor, key.getKey());
