@@ -1,4 +1,5 @@
 4.1.5
+ * Remove lock contention generated by getCapacity function in SSTableReader (CASSANDRA-19429)
 Merged from 4.0:
  * Remove bashisms for mx4j tool in cassandra-env.sh (CASSANDRA-19416)
 Merged from 3.11:
